--- a/index.html
+++ b/index.html
@@ -29,34 +29,40 @@
 </head>
 
 <body>
-  <div class="card mb-3 border-0" style="max-width: 540px;">
-    <div class="row g-0">
-      <div class="col-md-6 col-12 card--img">
-      </div>
-      <div class="col-md-6 col-12 d-flex">
-        <div class="card-body d-flex flex-column justify-content-evenly">
-          <p class="lead text-uppercase card--lead">PERFUME</p>
-          <h5 class="card-title card--title">Gabrielle Essence Eau De Parm</h5>
-          <div class="card-text card--text">A floral, solar and voluptuous interpretation composed by Olivier Polge,
-            Perfumer-Creator
-            for the House of CHANEL.</div>
-          <div class="card--price-section">
-            <span class="card--price py-3">$149.99</span>
-            <del class="card--old-price">$169.99</del>
-          </div>
-          <div class="d-grid gap-2">
-            <a href="#" class="btn btn-lg card--btn">
-              <svg width="15" height="16" xmlns="http://www.w3.org/2000/svg"><path d="M14.383 10.388a2.397 2.397 0 0 0-1.518-2.222l1.494-5.593a.8.8 0 0 0-.144-.695.8.8 0 0 0-.631-.28H2.637L2.373.591A.8.8 0 0 0 1.598 0H0v1.598h.983l1.982 7.4a.8.8 0 0 0 .799.59h8.222a.8.8 0 0 1 0 1.599H1.598a.8.8 0 1 0 0 1.598h.943a2.397 2.397 0 1 0 4.507 0h1.885a2.397 2.397 0 1 0 4.331-.376 2.397 2.397 0 0 0 1.12-2.021ZM11.26 7.99H4.395L3.068 3.196h9.477L11.26 7.991Zm-6.465 6.392a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Zm6.393 0a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Z" fill="#FFF"/></svg>
-              &nbsp; Add to Cart</a>
-          </div>
-         
+  <section >
+    <div class="card mb-3 border-0" style="max-width: 540px;">
+      <div class="row g-0">
+        <div class="col-md-6 col-12 card--img">
+        </div>
+        <div class="col-md-6 col-12 d-flex">
+          <div class="card-body d-flex flex-column justify-content-evenly">
+            <p class="lead text-uppercase card--lead">PERFUME</p>
+            <h5 class="card-title card--title">Gabrielle Essence Eau De Parm</h5>
+            <div class="card-text card--text">A floral, solar and voluptuous interpretation composed by Olivier Polge,
+              Perfumer-Creator
+              for the House of CHANEL.</div>
+            <div class="card--price-section">
+              <span class="card--price py-3">$149.99</span>
+              <del class="card--old-price">$169.99</del>
+            </div>
+            <div class="d-grid gap-2">
+              <a href="#" class="btn btn-lg card--btn">
+                <svg width="15" height="16" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M14.383 10.388a2.397 2.397 0 0 0-1.518-2.222l1.494-5.593a.8.8 0 0 0-.144-.695.8.8 0 0 0-.631-.28H2.637L2.373.591A.8.8 0 0 0 1.598 0H0v1.598h.983l1.982 7.4a.8.8 0 0 0 .799.59h8.222a.8.8 0 0 1 0 1.599H1.598a.8.8 0 1 0 0 1.598h.943a2.397 2.397 0 1 0 4.507 0h1.885a2.397 2.397 0 1 0 4.331-.376 2.397 2.397 0 0 0 1.12-2.021ZM11.26 7.99H4.395L3.068 3.196h9.477L11.26 7.991Zm-6.465 6.392a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Zm6.393 0a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Z"
+                    fill="#FFF" />
+                </svg>
+                &nbsp; Add to Cart</a>
+            </div>
 
+
+          </div>
         </div>
       </div>
     </div>
-  </div>
+  </section>
 
-  <div class="attribution">
+  <div class="attribution text-center">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Saniya Saher</a>.
   </div>
