--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 
 <body>
-  <section >
+  <main role="main">
     <div class="card mb-3 border-0" style="max-width: 540px;">
       <div class="row g-0">
         <div class="col-md-6 col-12 card--img">
@@ -37,7 +37,7 @@
         <div class="col-md-6 col-12 d-flex">
           <div class="card-body d-flex flex-column justify-content-evenly">
             <p class="lead text-uppercase card--lead">PERFUME</p>
-            <h5 class="card-title card--title">Gabrielle Essence Eau De Parm</h5>
+            <h1 class="card-title card--title">Gabrielle Essence Eau De Parm</h1>
             <div class="card-text card--text">A floral, solar and voluptuous interpretation composed by Olivier Polge,
               Perfumer-Creator
               for the House of CHANEL.</div>
@@ -60,12 +60,12 @@
         </div>
       </div>
     </div>
-  </section>
+  </main>
 
-  <div class="attribution text-center">
+  <footer class="attribution text-center" role="contentinfo">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Saniya Saher</a>.
-  </div>
+  </footer>
 </body>
 
 </html>
